[package]
name = "fasta_cli_toolkit"
version = "3.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ['derive'] }
anyhow = "1.0.65"
rand = "0.8.5"
textwrap = "0.15"
num_cpus = "1.13.1"
lazy_static = "1.4.0"

[profile.release]
lto = true
strip = "symbols"
